# RustConn

./: .clippy.toml  .gitignore  AUDIT_TASKS.md  CHANGELOG.md  Cargo.toml  README.md  RELEASE_TASKS.md  SECURITY.md  TODO.md  deny.toml  install-desktop.sh  messages.mo
rustconn/: Cargo.toml
rustconn-cli/: Cargo.toml
rustconn-cli/src/: cli.rs  color.rs  error.rs  main.rs  util.rs
rustconn-cli/src/commands/: add.rs  cloud_sync.rs  cluster.rs  completions.rs  connect.rs  delete.rs  duplicate.rs  dynamic_folder.rs  export_import.rs  group.rs  history.rs  list.rs  manpage.rs  mod.rs  monitor.rs  move_cmd.rs  pin.rs  recording.rs  secret.rs  sftp.rs  show.rs  smart_folder.rs  snippet.rs  stats.rs  sync.rs  tag.rs  template.rs  test.rs  update.rs  variable.rs  wol.rs
rustconn-core/: Cargo.toml
rustconn-core/benches/: search_bench.rs
rustconn-core/src/: .ssh_tunnel.rs.swp  activity_monitor.rs  busy.rs  cache.rs  cli_download.rs  dialog_utils.rs  dynamic_folder.rs  flatpak.rs  highlight.rs  host_check.rs  lib.rs  models.rs  sftp.rs  shell_escape.rs  smart_folder.rs  ssh_tunnel.rs  terminal_themes.rs  tunnel_manager.rs
rustconn-core/src/automation/: expect.rs
rustconn-core/src/cli_download/: components.rs  detection.rs  download.rs  extract.rs  install.rs  install_cloud.rs  install_custom.rs  install_pip.rs  mod.rs  uninstall.rs  update.rs
rustconn-core/src/config/: keybindings.rs  manager.rs  mod.rs  settings.rs
rustconn-core/src/connection/: fallback.rs  interning.rs  manager.rs  mod.rs  port_check.rs  retry.rs  ssh_inheritance.rs  ssh_prompt.rs  virtual_scroll.rs
rustconn-core/src/document/: mod.rs
rustconn-core/src/export/: asbru.rs  csv_export.rs  mobaxterm.rs  mod.rs  remmina.rs  securecrt.rs  ssh_config.rs
rustconn-core/src/ffi/: vnc.rs
rustconn-core/src/import/: asbru.rs  csv_import.rs  libvirt.rs  libvirt_daemon.rs  mobaxterm.rs  mod.rs  rdm.rs  rdp_file.rs  remmina.rs  securecrt.rs  ssh_config.rs  traits.rs  vv.rs
rustconn-core/src/models/: connection.rs  dynamic_folder.rs  group.rs  highlight.rs  protocol.rs  smart_folder.rs  snippet.rs  template.rs  tunnel.rs  workspace.rs
rustconn-core/src/monitoring/: collector.rs  metrics.rs  mod.rs  parser.rs  ssh_exec.rs
rustconn-core/src/performance/: batch.rs  compact_string.rs  debouncer.rs  interner.rs  lazy.rs  memory.rs  metrics.rs  mod.rs  pool.rs  scroller.rs  shrinkable_vec.rs
rustconn-core/src/protocol/: detection.rs  freerdp.rs  icons.rs  mod.rs  mosh.rs  rdp.rs  registry.rs  sftp.rs  spice.rs  ssh.rs  vnc.rs  zerotrust.rs
rustconn-core/src/rdp_client/: backend.rs  clipboard.rs  dir_watcher.rs  event.rs  input.rs  mod.rs  quick_actions.rs  rdpdr.rs
rustconn-core/src/search/: command_palette.rs  mod.rs
rustconn-core/src/secret/: bitwarden.rs  detection.rs  kdbx.rs  keepassxc.rs  libsecret.rs  macos_keychain.rs  manager.rs  mod.rs  onepassword.rs  pass.rs  passbolt.rs  resolver.rs  script_resolver.rs  status.rs  verification.rs
rustconn-core/src/session/: logger.rs  manager.rs  mod.rs  recording.rs  restore.rs
rustconn-core/src/spice_client/: client.rs  mod.rs
rustconn-core/src/ssh_agent/: mod.rs
rustconn-core/src/sync/: credential_check.rs  full_export.rs  full_merge.rs  group_export.rs  group_merge.rs  inventory.rs  manager.rs  mod.rs  settings.rs  tombstone.rs  variable_template.rs  watcher.rs
rustconn-core/src/template/: predefined.rs
rustconn-core/src/tracing/: mod.rs
rustconn-core/src/variables/: mod.rs
rustconn-core/src/vnc_client/: client.rs  mod.rs
rustconn-core/tests/fixtures/: mod.rs
rustconn-core/tests/integration/: async_patterns_tests.rs
rustconn-core/tests/properties/: activity_monitor_tests.rs  async_credential_tests.rs  cli_tests.rs  concurrent_save.rs  config_tests.rs  connection_probe_tests.rs  connection_tests.rs  credential_storage_tests.rs  csv_port_overflow.proptest-regressions  csv_port_overflow.rs  csv_tests.proptest-regressions  csv_tests.rs  dialog_tests.rs  export_format_tests.rs  ffi_tests.rs  full_merge_tests.rs  group_merge_tests.rs  highlight_tests.rs  keepass_tests.rs  log_sanitization_tests.rs  mod.rs  monitoring_tests.rs  mosh_tests.rs  protocol_tests.rs  rdp_backend_tests.rs  rdp_client_tests.rs  recording_tests.rs  script_resolver_tests.rs  search_tests.rs  security_tests.rs  serialization_tests.rs  smart_folder_tests.rs  ssh_agent_socket_tests.rs  ssh_agent_tests.rs  ssh_inheritance_tests.rs  ssh_prompt_tests.rs  storage_backend_tests.proptest-regressions  storage_backend_tests.rs  sync_path_traversal.proptest-regressions  sync_path_traversal.rs  (+4 more)
rustconn/assets/: io.github.totoshko88.RustConn-rdp.xml  io.github.totoshko88.RustConn-vv.xml  io.github.totoshko88.RustConn.desktop  io.github.totoshko88.RustConn.metainfo.xml  style.css
rustconn/src/: activity_coordinator.rs  app.rs  audio.rs  automation.rs  broadcast.rs  embedded.rs  embedded_spice.rs  embedded_trait.rs  embedded_vnc.rs  embedded_vnc_types.rs  external_window.rs  i18n.rs  main.rs  monitoring.rs  sidebar_types.rs  sidebar_ui.rs  smart_folder_ui.rs  state.rs  toast.rs  tray.rs  utils.rs  validation.rs  vault_ops.rs  wayland_surface.rs
rustconn/src/dialogs/: backend_missing.rs  cluster.rs  command_palette.rs  document.rs  export.rs  flatpak_components.rs  history.rs  import.rs  log_viewer.rs  mod.rs  password.rs  password_generator.rs  recording.rs  shortcuts.rs  smart_folder.rs  snippet.rs  statistics.rs  template.rs  template_manager.rs  terminal_search.rs  tunnel.rs  variable_setup.rs  variables.rs  widgets.rs  wol.rs
rustconn/src/embedded_rdp/: autotype.rs  buffer.rs  clipboard.rs  connection.rs  detect.rs  drawing.rs  ephemeral_args.rs  file_dnd.rs  input.rs  launcher.rs  mod.rs  resize.rs  thread.rs  types.rs  ui.rs
rustconn/src/embedded_vnc/: mod.rs  ui.rs
rustconn/src/session/: mod.rs  vnc.rs
rustconn/src/sidebar/: filter.rs  mod.rs  search.rs  view.rs
rustconn/src/split_view/: adapter.rs  bridge.rs  mod.rs  types.rs
rustconn/src/state/: connections.rs  mod.rs  sessions.rs  sync.rs
rustconn/src/terminal/: config.rs  file_drop.rs  highlight_overlay.rs  (+6 more)
(+200 files in other folders)
