[workspace]
resolver = "2"
members = [
    "rustconn-core",
    "rustconn",
    "rustconn-cli",
]

[workspace.package]
version = "0.9.11"
edition = "2024"
authors = ["Anton Isaiev <totoshko88@gmail.com>"]
license = "GPL-3.0-or-later"
rust-version = "1.88"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }
futures = "0.3"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# serde_yaml is deprecated; serde_yaml_ng is a maintained drop-in fork
serde_yaml = { version = "0.10", package = "serde_yaml_ng" }
toml = "1.0"

# GTK4 and VTE
gtk4 = "0.10"
vte4 = "0.9"
libadwaita = { version = "0.8", features = ["v1_5"] }

# Utilities
uuid = { version = "1.21", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
async-trait = "0.1"
secrecy = { version = "0.10", features = ["serde"] }
dirs = "6.0"
shellexpand = "3.1"
regex = "1.11"
zeroize = "1.8"

# Encryption
ring = "0.17"
argon2 = "0.5"
hex = "0.4"

# HTTP client and archive handling (for CLI download in Flatpak)
reqwest = { version = "0.12", features = ["rustls-tls", "stream"], default-features = false }
zip = "8.1"
flate2 = "1.1"
tar = "0.4"

# TLS — native-tls 0.2.18 fixes the Tlsv13 compile bug from 0.2.17
# See: https://github.com/rust-native-tls/rust-native-tls/issues/367
native-tls = "0.2.18"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1.9"
tempfile = "3.23"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# These lints suggest const fn but Vec/HashMap methods aren't const in stable Rust
missing_const_for_fn = "allow"
# Documentation backticks are too noisy for GTK widget names
doc_markdown = "allow"
# GTK callbacks often need owned values for closures
needless_pass_by_value = "allow"
# GTK widget methods often don't use self but need it for API consistency
unused_self = "allow"
# Numeric casts are common in GUI code for coordinates/sizes
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
# Option::map_or patterns are often clearer with if let in GTK code
option_if_let_else = "allow"
# must_use on every getter is too verbose
must_use_candidate = "allow"
# Redundant clones are often needed for GTK reference counting
redundant_clone = "allow"
# Match arms with identical bodies are sometimes clearer than alternatives
match_same_arms = "allow"
# Format string inlining is a style preference
uninlined_format_args = "allow"
# Borrow patterns in GTK are often required for trait bounds
needless_borrow = "allow"
# let...else is newer syntax, if let is still valid
manual_let_else = "allow"
# Prefixed bindings are sometimes needed for clarity
no_effect_underscore_binding = "allow"
# cloned vs copied is minor optimization
cloned_instead_of_copied = "allow"
# Closure style is often clearer in GTK callbacks
redundant_closure_for_method_calls = "allow"
redundant_closure = "allow"
# Option/Result wrapping is sometimes needed for API consistency
unnecessary_wraps = "allow"
# If block deduplication can reduce readability
branches_sharing_code = "allow"
# map().unwrap_or() patterns are common and readable
map_unwrap_or = "allow"
# Manual Option::map is sometimes clearer
manual_map = "allow"
# Wildcard imports are used for GTK prelude
wildcard_imports = "allow"
# GTK often requires borrowing for trait bounds
needless_borrows_for_generic_args = "allow"
# Clone assignment is sometimes clearer than clone_from
assigning_clones = "allow"


