[workspace]
resolver = "2"
members = [
    "rustconn-core",
    "rustconn",
    "rustconn-cli",
    "rustconn-pty-sys",
]

[workspace.package]
version = "0.17.5"
edition = "2024"
authors = ["Anton Isaiev <totoshko88@gmail.com>"]
license = "GPL-3.0-or-later"
rust-version = "1.95"

[workspace.dependencies]
# Async runtime
# Precise feature set (was "full"): the union of what the workspace actually
# uses. Cargo unifies tokio features across all crates, so listing the real
# set here drops unused features (test-util, io-std, signal, parking_lot, …)
# and trims tokio's own compile. Verify with `cargo build` after changing.
tokio = { version = "1.50", features = [
    "rt-multi-thread", # Runtime::new() in GUI/CLI + tokio::spawn workers in core
    "macros",          # tokio::select! in the debounce worker
    "net",             # TcpStream / lookup_host (host & port checks)
    "time",            # tokio::time::timeout across vault ops
    "sync",            # mpsc / watch channels in managers
    "fs",              # async config writes + CLI-download installs
    "process",         # tokio::process::Command (CLI downloads, secret backends)
    "io-util",         # AsyncWriteExt / AsyncReadExt
] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# serde_yaml is deprecated; serde_yaml_ng is a maintained drop-in fork
serde_yaml = { version = "0.10", package = "serde_yaml_ng" }
toml = "1.0"

# GTK4 and VTE
gtk4 = "0.11"
vte4 = "0.10"
libadwaita = { version = "0.9", features = ["v1_5"] }

# Utilities
async-channel = "2.5"
uuid = { version = "1.22", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
async-trait = "0.1"
secrecy = { version = "0.10", features = ["serde"] }
dirs = "6.0"
shellexpand = "3.1"
regex = "1.12"
zeroize = "1.8"

# Encryption
ring = "0.17"
argon2 = "0.5"
hex = "0.4"

# HTTP client and archive handling (for CLI download in Flatpak)
# native-tls instead of rustls-tls: minimises aws-lc-sys surface.
# Note: sspi (via ironrdp-connector) still pulls aws-lc-sys transitively;
# Flatpak manifests work around the GCC 15 -O2/-O0 conflict with a cc-wrap shim.
reqwest = { version = "0.12", features = ["native-tls", "stream"], default-features = false }
zip = "8.2"
flate2 = "1.1"
tar = "0.4.45"

# TLS — native-tls 0.2.18 fixes the Tlsv13 compile bug from 0.2.17
# See: https://github.com/rust-native-tls/rust-native-tls/issues/367
native-tls = "0.2.18"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Unicode text processing
unicode-segmentation = "1.13"

# Testing
proptest = "1.10"
tempfile = "3.26"

[workspace.lints.rust]
unsafe_code = "forbid"
# Low-risk hygiene lints from rust-pragmatic-guidelines.md. missing_debug_implementations
# is intentionally NOT enabled: on a GTK4 codebase it would fire on hundreds of
# widget-wrapping structs, breaking the 0-warning gate and forcing manual Debug impls
# nobody asked for (YAGNI).
unused_lifetimes = "warn"
redundant_lifetimes = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# ponytail: const-fn suggestions disabled because Vec/HashMap methods aren't const
# in stable Rust; drop this allow once they stabilise and re-run clippy.
missing_const_for_fn = "allow"
# Documentation backticks are too noisy for widget names
doc_markdown = "allow"
# Numeric casts are common in coordinate/size calculations
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
# Option::map_or patterns are often clearer with if let
option_if_let_else = "allow"
# must_use on every getter is too verbose
must_use_candidate = "allow"
# Match arms with identical bodies are sometimes clearer than alternatives
match_same_arms = "allow"
# Format string inlining is a style preference
uninlined_format_args = "allow"
# let...else is newer syntax, if let is still valid
manual_let_else = "allow"
# Prefixed bindings are sometimes needed for clarity
no_effect_underscore_binding = "allow"
# cloned vs copied is minor optimization
cloned_instead_of_copied = "allow"
# Option/Result wrapping is sometimes needed for API consistency
unnecessary_wraps = "allow"
# If block deduplication can reduce readability
branches_sharing_code = "allow"
# map().unwrap_or() patterns are common and readable
map_unwrap_or = "allow"
# Manual Option::map is sometimes clearer
manual_map = "allow"
# Clone assignment is sometimes clearer than clone_from
assigning_clones = "allow"

# Pragmatic Rust Guidelines (M-LINT-OVERRIDE-EXPECT): force every #[allow]
# / #[expect] override to carry a `reason = "..."` so future readers
# understand why the lint is suppressed.
allow_attributes_without_reason = "warn"
clone_on_ref_ptr = "warn"   # catches .clone() on Rc/Arc — prefer Rc::clone(&x)
empty_drop = "warn"         # flags empty Drop impls (usually a mistake)


