[package]
name = "rustconn-cli"
description = "Command-line interface for RustConn connection manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "rustconn-cli"
path = "src/main.rs"

[dependencies]
rustconn-core = { path = "../rustconn-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4.5.60", features = ["derive", "env"] }
clap_complete = "4.5"
clap_mangen = "0.2"
chrono = { workspace = true }
rpassword = "7.4"
secrecy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3.26"

[lints]
workspace = true
