[package]
name = "rustconn-core"
description = "Core library for RustConn connection manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
dirs = { workspace = true }
shellexpand = { workspace = true }
regex = { workspace = true }
ring = { workspace = true }
hex = { workspace = true }
data-encoding = "2.10"
csv = "1"
glob = "0.3"
shell-words = "1"
quick-xml = { version = "0.39", features = ["serialize"] }
argon2 = { workspace = true }
hostname = "0.4"
slug = "0.1"
# HTTP client and archive handling (for CLI download in Flatpak)
reqwest = { workspace = true }
zip = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
ar = "0.9"  # For extracting .deb packages (AWS SSM Plugin)
# File system notifications for RDPDR directory change monitoring
# Linux-only application, no macOS features needed
# macos_fsevent is needed for macOS dev builds (fsevent_sys dependency)
notify = { version = "8.2", default-features = false, features = ["macos_fsevent"] }
# Tracing for structured logging and performance profiling
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Pure Rust VNC client for embedded VNC sessions
vnc-rs = { version = "0.5", optional = true }
# Native SPICE client for embedded SPICE sessions
spice-client = { version = "0.2.0", optional = true }
# Pure Rust RDP client for embedded RDP sessions using IronRDP (crates.io)
# Using same versions as rdw project to avoid sspi/rand_core conflicts
# native-tls instead of rustls to match rdw approach
# Features: cliprdr (clipboard), rdpdr (shared folders), dvc (dynamic channels),
# displaycontrol (dynamic resolution), rdpsnd (audio)
ironrdp = { version = "0.14", features = [
    "connector", "session", "graphics", "pdu", "core", "svc",
    "cliprdr",        # Clipboard redirection
    "rdpdr",          # Device/drive redirection (shared folders)
    "dvc",            # Dynamic Virtual Channels
    "displaycontrol", # Dynamic resolution changes (MS-RDPEDISP)
    "rdpsnd",         # Audio redirection
], optional = true }
ironrdp-tokio = { version = "0.8", features = ["reqwest"], optional = true }
ironrdp-tls = { version = "0.2", features = ["native-tls"], optional = true }
# Pin native-tls to avoid Tlsv13 compile bug in 0.2.17
native-tls = { workspace = true }

# Note: ironrdp-rdpdr-native 0.5 requires ironrdp-rdpdr 0.5.x which matches ironrdp 0.14

[features]
default = ["vnc-embedded", "rdp-embedded", "spice-embedded"]
vnc-embedded = ["dep:vnc-rs"]
# rdp-embedded feature enables the RdpClient struct with IronRDP
rdp-embedded = [
    "dep:ironrdp",
    "dep:ironrdp-tokio",
    "dep:ironrdp-tls",
]
# spice-embedded feature enables the SpiceClient struct with native SPICE protocol
spice-embedded = ["dep:spice-client"]

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "search_bench"
harness = false

[lints]
workspace = true
