[package]
name = "rustconn"
description = "Manage remote connections easily"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "rustconn"
path = "src/main.rs"

[dependencies]
rustconn-core = { path = "../rustconn-core" }
tokio = { workspace = true }
gtk4 = { workspace = true, features = ["v4_14"] }
libadwaita = { workspace = true }
gdk4-wayland = { version = "0.11", optional = true }
vte4 = { workspace = true, features = ["v0_76"] }
uuid = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
secrecy = { workspace = true }
thiserror = { workspace = true }
open = "5"
dirs = { workspace = true }
# Tray icon support via StatusNotifierItem D-Bus protocol
# Requires libdbus-1-dev on Ubuntu/Debian or dbus-devel on Fedora
ksni = { version = "0.3", features = ["blocking"], optional = true }
# SVG rendering for tray icon (renders SVG to ARGB32 pixmap)
resvg = { version = "0.47", optional = true }
# Internationalization (gettext)
gettext-rs = { version = "0.7", features = ["gettext-system"] }
# Tracing for structured logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Audio playback for RDP embedded mode
cpal = { version = "0.17.3", optional = true }
serde = { workspace = true, features = ["derive"] }

[features]
default = ["tray", "vnc-embedded", "rdp-embedded", "rdp-audio", "wayland-native", "spice-embedded"]
tray = ["dep:ksni", "dep:resvg"]
vnc-embedded = ["rustconn-core/vnc-embedded"]
rdp-embedded = ["rustconn-core/rdp-embedded"]
rdp-audio = ["rdp-embedded", "dep:cpal"]
spice-embedded = ["rustconn-core/spice-embedded"]
wayland-native = ["dep:gdk4-wayland"]
# Enable libadwaita 1.6+ widgets (AdwSpinner, CSS variables, accent colors)
# Requires libadwaita >= 1.6 at build time (GNOME 50 Flatpak runtime or Fedora 44+)
adw-1-6 = ["libadwaita/v1_6"]
# Enable libadwaita 1.8+ widgets (AdwShortcutsDialog, AdwShortcutLabel)
# Requires libadwaita >= 1.8 at build time (GNOME 49+ Flatpak runtime or Fedora 42+)
adw-1-8 = ["adw-1-6", "libadwaita/v1_8"]

[lints]
workspace = true
