[package]
name = "rustconn"
description = "Manage remote connections easily"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "rustconn"
path = "src/main.rs"

[dependencies]
rustconn-core = { path = "../rustconn-core", version = "0.13.0" }
tokio = { workspace = true }
futures = { workspace = true }
gtk4 = { workspace = true, features = ["v4_14"] }
libadwaita = { workspace = true }
gdk4-wayland = { version = "0.11", optional = true }
vte4 = { workspace = true, features = ["v0_76"] }
uuid = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
open = "5"
dirs = { workspace = true }
# Tray icon support via StatusNotifierItem D-Bus protocol
# Requires libdbus-1-dev on Ubuntu/Debian or dbus-devel on Fedora
ksni = { version = "0.3", features = ["blocking"], optional = true }
# SVG rendering for tray icon (renders SVG to ARGB32 pixmap)
resvg = { version = "0.47", optional = true }
# Internationalization (gettext)
gettext-rs = { version = "0.7", features = ["gettext-system"] }
# Tracing for structured logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Audio playback for RDP embedded mode
cpal = { version = "0.17.3", optional = true }
serde = { workspace = true, features = ["derive"] }
shell-words = "1"

[features]
default = ["tray", "vnc-embedded", "rdp-embedded", "rdp-audio", "wayland-native", "spice-embedded"]
tray = ["dep:ksni", "dep:resvg"]
vnc-embedded = ["rustconn-core/vnc-embedded"]
rdp-embedded = ["rustconn-core/rdp-embedded"]
rdp-audio = ["rdp-embedded", "dep:cpal"]
spice-embedded = ["rustconn-core/spice-embedded"]
wayland-native = ["dep:gdk4-wayland"]
# Enable libadwaita 1.6+ widgets (AdwSpinner, CSS variables, accent colors)
# Requires libadwaita >= 1.6 at build time (GNOME 50 Flatpak runtime or Fedora 44+)
adw-1-6 = ["libadwaita/v1_6"]
# Enable libadwaita 1.7+ widgets (AdwWrapBox, AdwToggleGroup)
# Requires libadwaita >= 1.7 at build time (GNOME 48+ / Fedora 42+)
adw-1-7 = ["adw-1-6", "libadwaita/v1_7"]
# Enable libadwaita 1.8+ widgets (AdwShortcutsDialog, AdwShortcutLabel)
# Requires libadwaita >= 1.8 at build time (GNOME 49+ Flatpak runtime or Fedora 42+)
adw-1-8 = ["adw-1-7", "libadwaita/v1_8"]

# Inherit workspace lints as base, then add GTK-specific suppressions.
# Note: Cargo requires that workspace = true stands alone in [lints];
# crate-specific overrides go into [lints.rust] / [lints.clippy] without
# repeating workspace = true — so we spell out the full lint set here.
[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_const_for_fn = "allow"
doc_markdown = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
option_if_let_else = "allow"
must_use_candidate = "allow"
match_same_arms = "allow"
uninlined_format_args = "allow"
manual_let_else = "allow"
no_effect_underscore_binding = "allow"
cloned_instead_of_copied = "allow"
unnecessary_wraps = "allow"
branches_sharing_code = "allow"
map_unwrap_or = "allow"
manual_map = "allow"
assigning_clones = "allow"
# GTK-specific clippy suppressions — scoped to the GUI crate only,
# so rustconn-core stays under stricter linting.
redundant_clone = "allow"
needless_borrow = "allow"
needless_pass_by_value = "allow"
unused_self = "allow"
wildcard_imports = "allow"
needless_borrows_for_generic_args = "allow"
redundant_closure_for_method_calls = "allow"
redundant_closure = "allow"
